fix carousel spacing

--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -53,7 +53,6 @@ p {
     .carousel {
       width:auto;
       height:auto;
-      padding: 5rem;
     }
 }
 
